--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ h2 {
 }
 
 .game-title {
-  display: none; /* Hide game titles initially */
+  display: none; 
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 28px;
   font-weight: bold;
@@ -51,7 +51,6 @@ h2 {
   display: none;
 }
 
-/* Add a background image for the game selection title */
 .game-selection-title {
   background-image: url("your-background-image.jpg");
   background-size: cover;
@@ -59,7 +58,6 @@ h2 {
   padding: 50px;
 }
 
-/* Style the game selection title text */
 .game-selection-title h1 {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 48px;
